--- a/.env
+++ b/.env
@@ -2,18 +2,18 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:CDfALTaN3n4D+Dgh1aphvNessV1R/0oOTTSx24BpoDs=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=sail
-DB_PASSWORD=password
+DB_DATABASE=haikyuu
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
