--- a/.env
+++ b/.env
@@ -2,14 +2,14 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:CDfALTaN3n4D+Dgh1aphvNessV1R/0oOTTSx24BpoDs=
 APP_DEBUG=true
-APP_URL=http://localhost:8000
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=haikyuu
 DB_USERNAME=root
